--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext {
+    compileSdkVersion = 24
+    buildToolsVersion = "24.0.3"
+    targetSdkVersion = 24
+}
