分支切换保存

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.QrcodeActivity"/>
+        <activity android:name=".ui.TeActivity"/>
     </application>
 
 </manifest>
