--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <application
             android:name=".XiaojsApplication"
@@ -18,15 +18,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity">
+
+        </activity>
+        <activity android:name=".ui.QrcodeActivity"/>
+        <activity android:name=".common.crop.CropImageActivity"/>
+        <activity android:name=".common.crop.CropImageMainActivity"/>
+        <activity android:name=".ui.TestAPIActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.QrcodeActivity"/>
-        <activity android:name="com.benyuan.xiaojs.common.crop.CropImageActivity"/>
-        <activity android:name="com.benyuan.xiaojs.common.crop.CropImageMainActivity"/>
     </application>
 
 </manifest>
