--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".common.crop.CropImageActivity"/>
         <activity android:name=".common.crop.CropImageMainActivity"/>
         <activity android:name=".ui.account.RegisterActivity"/>
+        <activity android:name=".ui.account.LoginActivity"/>
     </application>
 
 </manifest>
