--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".ui.account.RegisterActivity"/>
         <activity android:name=".ui.mine.SettingsActivity"/>
         <activity android:name=".ui.course.MyCourseActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.course.LineCourseCreationActivity"/>
     </application>
 
 </manifest>
