add create live lseeion api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
+def ksPro = new Properties()
+ksPro.load(new FileInputStream(rootProject.file("ks.properties")))
+
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -12,9 +16,18 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release_config {
+            keyAlias ksPro['keyAlias']
+            keyPassword ksPro['keyPassword']
+            storeFile file(ksPro['storeFile'])
+            storePassword ksPro['storePassword']
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release_config
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
