--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".ui.mine.SettingsActivity"/>
         <activity android:name=".ui.course.MyCourseActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.course.LiveCourseCreationActivity"/>
+        <activity android:name=".ui.course.MyCourseSearchActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
