--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     //3d wheel picker
     compile project(':3d_wheelpicker')
     compile files('libs/android-support-v7-recyclerview.jar')
+
+    //flex layout
+    compile 'com.google.android:flexbox:0.2.3'
 }
