--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.course.CourseCreationActivity"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
+        <activity android:name=".ui.mine.TeachingAbilityActivity">
+        </activity>
+        <activity android:name=".ui.mine.EditTeachingAbilityActivity">
+        </activity>
     </application>
 
 </manifest>
