--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.course.CourseCreationActivity"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
+        <activity android:name=".ui.course.CourseCreationOptionalInfoActivity"/>
     </application>
 
 </manifest>
