add lession detail activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
 
     //flex layout
     compile 'com.google.android:flexbox:0.2.3'
+    //desgin
+    compile 'com.android.support:design:25.0.0'
 }
