我要开课ui调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
         <activity android:name=".ui.course.LessionDetailActivity">
 
         </activity>
+        <activity android:name=".ui.course.LiveCourseBriefActivity"/>
+        <activity android:name=".ui.course.SalePromotionActivity"/>
+        <activity android:name=".ui.course.SitInOnActivity"/>
+        <activity android:name=".ui.course.TeacherIntroductionActivity"/>
     </application>
 
 </manifest>
