--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.account.LoginActivity">
-
-        </activity>
-        <activity android:name=".ui.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".ui.MainActivity"
+                android:screenOrientation="portrait"/>
+
         <activity
                 android:name=".common.crop.CropImageActivity"
                 android:screenOrientation="portrait"/>
@@ -42,7 +43,9 @@
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.course.CourseCreationActivity"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
-        <activity android:name=".ui.course.MyCourseSearchActivity" android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.course.MyCourseSearchActivity"
+                android:screenOrientation="portrait"/>
         <activity android:name=".ui.course.CourseCreationOptionalInfoActivity"/>
         <activity android:name=".ui.mine.TeachingAbilityActivity">
         </activity>
