优化消息界面，修改下拉刷新列表位置计算的问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
         <activity
                 android:name=".ui.course.CancelLessonActivity"
                 android:screenOrientation="portrait"/>
+        <activity android:name=".ui.message.NotificationCategoryListActivity" android:screenOrientation="portrait"/>
 
     </application>
 
