优化消息列表，增加我的报名列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,9 @@
         <activity
                 android:name=".ui.message.NotificationCategoryListActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.mine.MyEnrollActivity"
+                android:screenOrientation="portrait"/>
 
     </application>
 
