--- a/ks.properties
+++ b/ks.properties
@@ -1,4 +1,4 @@
 keyAlias = xma
-keyPassword = System.console().readLine("\nKey password: ")
+keyPwd = xiaojs100y
 storeFile = ks.jks
-storePassword = System.console().readLine("\nKeystore password: ")
+storePwd = xiaojs100y
