--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,29 +58,22 @@ dependencies {
     //Logger
     compile 'com.orhanobut:logger:1.15'
     //pull refresh
-    compile project(':pulltorefresh')
-
+//    compile project(':pulltorefresh')
     compile files('libs/zxing.jar')
     //3d wheel picker
     compile project(':3d_wheelpicker')
     compile files('libs/android-support-v7-recyclerview.jar')
-
     //flex layout
     compile 'com.google.android:flexbox:0.2.3'
-
     //qiniu
     compile 'com.qiniu:qiniu-android-sdk:7.2.+'
-
     //crash report
     compile 'com.tencent.bugly:crashreport:latest.release'
-
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-
-
-
+    compile files('libs/nineoldanimatin.jar')
 }
