--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     //Logger
     compile 'com.orhanobut:logger:1.15'
     //pull refresh
-//    compile project(':pulltorefresh')
-    compile files('libs/zxing.jar')
+    //    compile project(':pulltorefresh')
+    //compile files('libs/zxing.jar')
     //3d wheel picker
     compile project(':3d_wheelpicker')
     compile files('libs/android-support-v7-recyclerview.jar')
@@ -69,11 +69,16 @@ dependencies {
     compile 'com.qiniu:qiniu-android-sdk:7.2.+'
     //crash report
     compile 'com.tencent.bugly:crashreport:latest.release'
+    //qiniu live dependencies
+    compile 'com.qiniu:happy-dns:0.2.+'
+    compile 'com.qiniu.pili:pili-android-qos:0.8.+'
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/nineoldanimatin.jar')
+//    compile files('libs/nineoldanimatin.jar')
+//    compile files('libs/pldroid-media-streaming-2.0.4.jar')
+//    compile files('libs/pldroid-player-1.3.2.jar')
 }
