--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        //bugly符号表
+        classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
