--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     //debug only////////////////////////////////////////////////////////////////////////////////////
     debugCompile 'com.facebook.stetho:stetho:1.4.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+
+    //recyclerview
+    compile "com.android.support:recyclerview-v7:22.0.0"
 }
