--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
-
     <!-- live -->
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-feature
@@ -22,7 +21,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-    <!--bugly-->
+    <!-- bugly -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_LOGS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -36,17 +35,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.account.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
                 android:name=".ui.MainActivity"
                 android:screenOrientation="portrait">
         </activity>
-
         <activity
                 android:name=".common.crop.CropImageActivity"
                 android:screenOrientation="portrait"/>
@@ -54,7 +47,6 @@
                 android:name=".common.crop.CropImageMainActivity"
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-
         <activity android:name=".ui.account.RegisterActivity"/>
         <activity android:name=".ui.mine.SettingsActivity"/>
         <activity
@@ -69,13 +61,15 @@
         <activity android:name=".ui.mine.TeachingAbilityActivity">
         </activity>
         <activity android:name=".ui.mine.EditTeachingAbilityActivity">
-
         </activity>
         <activity android:name=".ui.course.LessonHomeActivity">
         </activity>
         <activity android:name=".ui.TestAPIActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".ui.course.LiveLessonBriefActivity"/>
         <activity android:name=".ui.course.SalePromotionActivity"/>
@@ -101,7 +95,11 @@
                 android:name=".ui.classroom.ClassRoomActivity"
                 android:screenOrientation="landscape"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+        <activity android:name=".ui.message.ContactActivity">
+        </activity>
 
+        <activity android:name=".ui.message.PostDynamicActivity">
+        </activity>
     </application>
 
 </manifest>
