1.主界面tab修改 2.首页修改为动态列表 3.增加直播页 4.增加个人主页 5.增加动态详情页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,11 @@
                 android:name=".ui.classroom.ClassRoomActivity"
                 android:screenOrientation="landscape"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-
+        <activity
+                android:name=".ui.GlobalSearchActivity"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".ui.home.MomentDetailActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.mine.PersonHomeActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
