1.修改首页界面滑动可能影响性能问题 2.修改首页加号影响性能问题 3.优化首页界面 4.优化动态详情界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,8 +104,17 @@
         <activity
                 android:name=".ui.GlobalSearchActivity"
                 android:screenOrientation="portrait"/>
-        <activity android:name=".ui.home.MomentDetailActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.mine.PersonHomeActivity" android:screenOrientation="portrait" />
+        <activity
+                android:name=".ui.home.MomentDetailActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.mine.PersonHomeActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.home.MomentCommentActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize"
+                android:theme="@style/ActivityStyleBottomToTop"/>
     </application>
 
 </manifest>
