--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,7 @@
                 android:name=".ui.home.MomentDetailActivity"
                 android:screenOrientation="portrait"/>
         <activity
-                android:name=".ui.mine.PersonHomeActivity"
+                android:name=".ui.personal.PersonHomeActivity"
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.home.MomentCommentActivity"
@@ -132,6 +132,9 @@
                 android:name=".ui.home.MomentUpdateActivity"
                 android:screenOrientation="portrait"/>
 
+        <activity
+                android:name=".ui.mine.ScrollTabActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
