--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,10 @@
                 android:screenOrientation="landscape"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
+                android:name=".ui.classroom.document.DocumentActivity"
+                android:screenOrientation="landscape"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+        <activity
                 android:name=".ui.search.SearchActivity"
                 android:screenOrientation="portrait"/>
         <activity
