#2-搜索-搜索结果超过3个人时，点击 查看更多人 按钮无响应

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,9 @@
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.message.ShareScopeActivity">
         </activity>
+        <activity
+                android:name=".ui.search.SearchListActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
