--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,6 +146,7 @@
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.common.ImageViewActivity"
+                android:theme="@style/CustomerDialog"
                 android:screenOrientation="portrait"/>
     </application>
 
