--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,9 @@
                 android:name=".ui.common.ImageViewActivity"
                 android:theme="@style/CustomerDialog"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.certification.CertificationActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
