--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,14 @@ android {
         }
     }
     buildTypes {
+//        debug {
+//            minifyEnabled true
+//            useProguard false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
         release {
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             signingConfig signingConfigs.release_config
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
