--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
         </activity>
         <activity android:name=".ui.mine.EditTeachingAbilityActivity">
         </activity>
-        <activity android:name="ui.course.LessonHomeActivity">
+        <activity android:name=".ui.course.LessonHomeActivity">
         </activity>
         <activity android:name=".ui.TestAPIActivity">
         </activity>
