--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,8 @@ dependencies {
 
     //recyclerview
     compile "com.android.support:recyclerview-v7:22.0.0"
+
+    compile ('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
 }
