1.增加班级主页 2.增加课表页 3.增加同学列表 4.增加班级动态列表 5.优化部分布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,18 @@
         <activity
                 android:name=".ui.certification.CertificationActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.grade.GradeHomeActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.grade.ScheduleActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.grade.RoomMatesActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.grade.MomentActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
