--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,9 @@
                 android:name=".common.crop.CropImageMainActivity"
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-        <activity android:name=".ui.account.RegisterActivity"/>
+        <activity android:name=".ui.account.RegisterActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity android:name=".ui.mine.SettingsActivity"/>
         <activity
                 android:name=".ui.course.MyLessonActivity"
