--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -175,6 +175,10 @@
         <activity
                 android:name=".ui.grade.PersonalInfoActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.chat.ChatActivity"
+                android:windowSoftInputMode="stateHidden|adjustResize"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
