修改发动态界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,7 +131,7 @@
         </activity>
         <activity
                 android:name=".ui.message.PostDynamicActivity"
-                android:windowSoftInputMode="stateAlwaysVisible|adjustResize">
+                android:windowSoftInputMode="stateAlwaysVisible|adjustPan">
         </activity>
         <activity android:name=".ui.message.SecurityLevelActivity">
         </activity>
