教室，进入教室后请求失败退出界面后(短时间内)会导致外面的activity调用onDestory，onCreate。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,7 +186,8 @@
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
                 android:name=".ui.lesson.TeachLessonActivity"
-                android:screenOrientation="portrait"/>
+                android:screenOrientation="portrait"
+                android:configChanges="orientation|screenSize"/>
         <activity
                 android:name=".ui.lesson.EnrollLessonActivity"
                 android:screenOrientation="portrait"/>
