--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,17 +186,28 @@
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
                 android:name=".ui.lesson.TeachLessonActivity"
-                android:screenOrientation="portrait"
-                android:configChanges="orientation|screenSize"/>
+                android:configChanges="orientation|screenSize"
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.lesson.EnrollLessonActivity"
                 android:screenOrientation="portrait"/>
-        <!--service-->
+        <!-- service -->
         <service
                 android:name=".data.loader.SyncService"
                 android:exported="false"/>
 
+        <provider
+                android:name=".data.download.DownloadProvider"
+                android:authorities="cn.xiaojs.providers.downloads.documents"
+                android:enabled="true"
+                android:exported="false">
+        </provider>
 
+        <service
+                android:name=".data.download.DownloadService"
+                android:enabled="true"
+                android:exported="false">
+        </service>
     </application>
 
 </manifest>
