--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,7 @@
         <activity
                 android:name=".ui.SplashActivity"
                 android:theme="@style/SplashTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
                 android:name=".ui.account.LoginActivity"
@@ -82,6 +78,11 @@
         <activity android:name=".ui.lesson.LessonHomeActivity">
         </activity>
         <activity android:name=".ui.TestAPIActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".ui.lesson.LiveLessonBriefActivity"/>
         <activity android:name=".ui.lesson.SalePromotionActivity"/>
@@ -201,7 +202,7 @@
 
         <provider
                 android:name=".data.download.DownloadProvider"
-                android:authorities="cn.xiaojs.providers.downloads.documents"
+                android:authorities="cn.xiaojs.xma"
                 android:enabled="true"
                 android:exported="false">
         </provider>
