--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,25 +79,27 @@ dependencies {
     //qiniu live dependencies
     compile 'com.qiniu:happy-dns:0.2.+'
     compile 'com.qiniu.pili:pili-android-qos:0.8.+'
+    //wechat share
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
+    //QQ
+    compile files('libs/open_sdk_r5781_lite.jar')
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-//    compile files('libs/nineoldanimatin.jar')
-//    compile files('libs/pldroid-media-streaming-2.0.4.jar')
-//    compile files('libs/pldroid-player-1.3.2.jar')
+    //    compile files('libs/nineoldanimatin.jar')
+    //    compile files('libs/pldroid-media-streaming-2.0.4.jar')
+    //    compile files('libs/pldroid-player-1.3.2.jar')
     //compile files('libs/nineoldanimatin.jar')
-
     //debug only////////////////////////////////////////////////////////////////////////////////////
     debugCompile 'com.facebook.stetho:stetho:1.4.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-
     //recyclerview
-    compile "com.android.support:recyclerview-v7:22.0.0"
-
-    compile ('io.socket:socket.io-client:0.8.3') {
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
+
 }
